# MarkdownReader

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc
android/: AndroidManifest.xml
qml/: BlockDelegate.qml  Reader.qml  RepositoryDelegate.qml
src/: documentmodel.cpp  documentmodel.h  repositoryhandler.cpp  repositoryhandler.h  repositorylistmodel.cpp  repositorylistmodel.h  searchdocumentproxymodel.cpp  searchdocumentproxymodel.h
src/documentloaders/: abstractdocumentloader.h  localdocumentloader.cpp  localdocumentloader.h
src/repositoryloaders/: abstractrepositoryloader.h  localrepositoryloader.cpp  localrepositoryloader.h
test-repo/: Full-Markdown.md  headers.md  ignoring markdown.md  other.md  videos.md  таблицы.md
test-repo/code/: c#.md  css & js.md  пхп.md
test-repo/lists/: task-lists.md  списки.md
test-repo/ссылки/: links.md  картинки.md
